[chezmoi] Add macOS detection brew

--- a/run_once_install-brew.sh.tmpl
+++ b/run_once_install-brew.sh.tmpl
@@ -1,6 +1,9 @@
 #!/bin/bash
-if ! command -v brew > /dev/null; then
-  /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+# Only install Homebrew on macOS
+if [[ "$OSTYPE" == "darwin"* ]]; then
+  if ! command -v brew > /dev/null; then
+    /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+  fi
+  brew bundle --global
 fi
-brew bundle --global
 
