--- a/private_dot_inputrc.tmpl
+++ b/private_dot_inputrc.tmpl
@@ -4,4 +4,4 @@ set editing-mode vi
 set show-mode-in-prompt on
 set vi-ins-mode-string "\1\033[0;32m\2[I]\1\033[0m\2"
 set vi-cmd-mode-string "\1\033[2;33m\2[N]\1\033[0m\2"
-{{- end -}}
+{{- end }}
